# cups-pjl-monitor

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
CMake/: FindCUPS.cmake
src/: main.c  pjl.c  status.h  status.y
test/: CMakeLists.txt  test_print_data.py
test/helpers/: __init__.py  monitor.py
test/print_data/: test.c
